--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <!--Card 3-->
         <div class="project-container project-card">
           <video width="720" controls
-            poster="assets/images/posterSD2.JPG"
+            poster="assets/images/posterSD2.jpg"
             alt="SD Video Game"
             loading="lazy"
             class="project-pic">
